--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "backend/index.js",
-    "dev": "nodemon backend/index.js"
+    "dev": "npm run start"
   },
   "keywords": [],
   "author": "",
