--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node backend/index.js",
     "dev": "npm run start",
     "build": "npm run build"
   },
